--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
 <span class="header">
     <span class="header-title">Formly Editor</span>
     <span class="header-buttons">
-        <button mat-button (click)="onUploadForm()"><mat-icon>file_upload</mat-icon>Upload Form</button>
-        <button mat-button (click)="onDownloadForm()"><mat-icon>file_download</mat-icon>Download Form</button>
+        <button mat-button (click)="onImportForm()"><mat-icon>file_download</mat-icon>Import Form</button>
+        <button mat-button (click)="onExportForm()"><mat-icon>file_upload</mat-icon>Export Form</button>
         <mat-slide-toggle [(ngModel)]="wrapperService.isEditMode">Edit Mode</mat-slide-toggle>
     </span>
 </span>
