--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -15,7 +15,7 @@
 	display: flex;
 	flex-direction: column;
     height: 100%;
-    width: 400px;
+    width: 25%;
 	min-width: 200px;
 	max-width: 40%;
 }
