--- a/src/app/components/editor-wrapper/editor-wrapper.component.scss
+++ b/src/app/components/editor-wrapper/editor-wrapper.component.scss
@@ -1,5 +1,7 @@
 .editor-wrapper {
     display: block;
+    border: 2px solid transparent;
+    background-color: white;
 }
 
 .editor-header {
@@ -14,9 +16,9 @@
 }
 
 .editor-wrapper.edit-mode:hover {
-    outline: 2px solid rgba(0, 0, 0, 0.1);
+    border: 2px solid #EBEBEB;
 }
 
 .editor-wrapper.edit-mode.active {
-    outline: 2px solid rgba(0, 0, 0, 0.2);
+    border: 2px solid #7A7A7A;
 }
