--- a/src/app/editor/components/editor-wrapper/editor-wrapper.component.html
+++ b/src/app/editor/components/editor-wrapper/editor-wrapper.component.html
@@ -1,7 +1,7 @@
 <div class="editor-wrapper" [ngClass]="{'edit-mode': wrapperService.isEditMode, 'active': isActiveField}" (click)="onClick($event)">
     <div class="editor-header" *ngIf="wrapperService.isEditMode">
         <span class="editor-title">{{ formService.getFormattedFieldName(field.name, field.key) }}</span>
-        <button *ngIf="canHaveChildren" mat-icon-button [matMenuTriggerFor]="addMenu" (click)="$event.stopPropagation()">
+        <button *ngIf="field.canHaveChildren" mat-icon-button [matMenuTriggerFor]="addMenu" (click)="$event.stopPropagation()">
             <mat-icon>add</mat-icon>
         </button>
         <mat-menu #addMenu="matMenu">
