fixed editor wrapper

--- a/src/app/editor/components/editor-wrapper/editor-wrapper.component.html
+++ b/src/app/editor/components/editor-wrapper/editor-wrapper.component.html
@@ -1,14 +1,24 @@
 <div class="editor-wrapper" [ngClass]="{'edit-mode': wrapperService.isEditMode, 'active': isActiveField}" (click)="onClick($event)">
     <div class="editor-header" *ngIf="wrapperService.isEditMode">
         <span class="editor-title">{{ formService.getFormattedFieldName(field.name, field.key) }}</span>
-        <button *ngIf="field.canHaveChildren" mat-icon-button [matMenuTriggerFor]="addMenu" (click)="$event.stopPropagation()">
+        <button *ngIf="field.canHaveChildren" mat-icon-button [matMenuTriggerFor]="addCategoryMenu" (click)="$event.stopPropagation()">
             <mat-icon>add</mat-icon>
         </button>
-        <mat-menu #addMenu="matMenu">
-            <button mat-menu-item *ngFor="let type of formService.fieldTypes" (click)="onAddChildField(type)">
-                {{formService.getFieldTypeName(type)}}
-            </button>
-        </mat-menu>
+        
+		<mat-menu #addCategoryMenu="matMenu">
+            <ng-container *ngFor="let category of formService.fieldCategories">
+                <button mat-menu-item [matMenuTriggerFor]="addFieldMenu">
+                    {{ category.name }}
+                </button>
+
+                <mat-menu #addFieldMenu="matMenu">
+                    <button mat-menu-item  *ngFor="let field of category.fields" (click)="onAddChildField(field.type, field.customType)">
+                        {{ field.name }}
+                    </button>
+                </mat-menu>
+            </ng-container>
+		</mat-menu>
+        
         <button *ngIf="!!field.parentFieldId" mat-icon-button (click)="onRemove(); $event.stopPropagation()">
             <mat-icon>remove</mat-icon>
         </button>
