--- a/src/app/editor/components/editor-wrapper/editor-wrapper.component.html
+++ b/src/app/editor/components/editor-wrapper/editor-wrapper.component.html
@@ -12,8 +12,8 @@
                 </button>
 
                 <mat-menu #addFieldMenu="matMenu">
-                    <button mat-menu-item  *ngFor="let field of category.fields" (click)="onAddChildField(field.type, field.customType)">
-                        {{ field.name }}
+                    <button mat-menu-item  *ngFor="let option of category.typeOptions" (click)="onAddChildField(option.name, option.customName)">
+                        {{ option.displayName }}
                     </button>
                 </mat-menu>
             </ng-container>
