--- a/src/app/components/card-wrapper/card-wrapper.component.html
+++ b/src/app/components/card-wrapper/card-wrapper.component.html
@@ -1,3 +1,4 @@
 <mat-card>
+    <mat-card-title *ngIf="to.cardTitle">{{ to.cardTitle }}</mat-card-title>
     <ng-container #fieldComponent></ng-container>
 </mat-card>
