--- a/projects/editor/src/lib/components/editor-wrapper/editor-wrapper.component.scss
+++ b/projects/editor/src/lib/components/editor-wrapper/editor-wrapper.component.scss
@@ -1,6 +1,6 @@
 .editor-wrapper {
     display: block;
-    border: 2px solid transparent;
+    border: 1px solid transparent;
     background-color: white;
 }
 
@@ -16,9 +16,9 @@
 }
 
 .editor-wrapper.edit-mode:hover {
-    border: 2px solid #EBEBEB;
+    border: 1px solid #E0E0E0;
 }
 
 .editor-wrapper.edit-mode.active {
-    border: 2px solid #7A7A7A;
+    border: 2px solid #A3A3A3;
 }
