--- a/projects/editor/src/lib/components/sidebar-section/sidebar-section.component.html
+++ b/projects/editor/src/lib/components/sidebar-section/sidebar-section.component.html
@@ -1,7 +1,7 @@
 <div class="sidebar-header">
 	<span class="sidebar-header-left">
 		<button [disabled]="!isCollapsible" mat-icon-button (click)="onToggleExpansionClicked()">
-			<mat-icon class="expand-icon" [class.expanded-180]="isCollapsed" *ngIf="isCollapsible">expand_more</mat-icon>
+			<mat-icon class="expand-icon" [class.expanded-90]="!isCollapsed" *ngIf="isCollapsible">chevron_right</mat-icon>
 		</button>
 		<span>{{ sectionTitle }}</span>
 	</span>
