--- a/projects/editor/src/lib/components/sidebar-section/sidebar-section.component.scss
+++ b/projects/editor/src/lib/components/sidebar-section/sidebar-section.component.scss
@@ -12,13 +12,14 @@
 
 .sidebar-header {
 	flex-shrink: 0;
-    height: var(--header-height);
+    height: 48px;
     display: flex;
 	justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
     padding: 0 12px;
     border-bottom: 1px solid rgba(0,0,0,.12);
+    user-select: none;
 }
 
 .sidebar-header-left {
@@ -41,6 +42,7 @@
 
 .sidebar-content {
 	display: inline-flex;
+    flex-direction: column;
 	min-width: 100%;
     box-sizing: border-box;
     padding: 8px;
