refactor(tree-header): remove unnecessary highlihght logic (#20)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,7 +28,7 @@ formly-field {
     user-select: none;
 }
 
-.tree-item.highlighted {
+.tree-item:hover {
 	background-color: rgba(0, 0, 0, 0.05);
 }
 
