feat(formly-group): use same connectedTo list

--- a/projects/editor/src/lib/components/editor-formly-group/editor-formly-group.component.html
+++ b/projects/editor/src/lib/components/editor-formly-group/editor-formly-group.component.html
@@ -3,7 +3,7 @@
     [ngClass]="{ 'edit-mode': wrapperService.isEditMode }"
     cdkDropList
     [cdkDropListOrientation]="dropListOrientation"
-    [cdkDropListEnterPredicate]="canEnter.bind(this)"
+    [cdkDropListEnterPredicate]="canEnter"
     [cdkDropListConnectedTo]="connectedTo"
     [cdkDropListData]="field"
     (cdkDropListDropped)="onDroplistDropped($event)">
