--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@ formly-field {
     line-height: 40px;
     text-align: center;
     padding: 0 10px;
+    box-sizing: border-box;
     background-color: #EBEBEB;
     border: dashed 2px #7A7A7A;
     border-radius: 4px;
