refactor(formService): moved isEditMode to formService

--- a/projects/editor/src/lib/components/editor-formly-group/editor-formly-group.component.html
+++ b/projects/editor/src/lib/components/editor-formly-group/editor-formly-group.component.html
@@ -1,6 +1,6 @@
 <div [id]="field.fieldId"
     [classList]="dropListClasses"
-    [ngClass]="{ 'edit-mode': wrapperService.isEditMode }"
+    [ngClass]="{ 'edit-mode': formService.isEditMode }"
     cdkDropList
     [cdkDropListOrientation]="dropListOrientation"
     [cdkDropListEnterPredicate]="canEnter"
