--- a/projects/editor/src/lib/components/home/home.component.html
+++ b/projects/editor/src/lib/components/home/home.component.html
@@ -3,7 +3,7 @@
     <span class="header-buttons">
         <button mat-button (click)="onImportForm()"><mat-icon>file_download</mat-icon>Import Form</button>
         <button mat-button (click)="onExportForm()"><mat-icon>file_upload</mat-icon>Export Form</button>
-        <mat-slide-toggle [(ngModel)]="wrapperService.isEditMode">Edit Mode</mat-slide-toggle>
+        <mat-slide-toggle [(ngModel)]="formService.isEditMode">Edit Mode</mat-slide-toggle>
     </span>
 </span>
 <mat-tab-group>
