--- a/projects/editor/src/lib/components/home/home.component.html
+++ b/projects/editor/src/lib/components/home/home.component.html
@@ -3,14 +3,14 @@
     <span class="header-buttons">
         <button mat-button (click)="onImportForm()"><mat-icon>file_download</mat-icon>Import Form</button>
         <button mat-button (click)="onExportForm()"><mat-icon>file_upload</mat-icon>Export Form</button>
-        <mat-slide-toggle [(ngModel)]="formService.isEditMode">Edit Mode</mat-slide-toggle>
+        <mat-slide-toggle [(ngModel)]="editorService.isEditMode">Edit Mode</mat-slide-toggle>
     </span>
 </span>
 <mat-tab-group>
-    <mat-tab *ngFor="let form of formService.forms; let i = index">
+    <mat-tab *ngFor="let form of editorService.forms; let i = index">
         <ng-template mat-tab-label>
             {{ form.name }}
-            <button *ngIf="i !== 0" class="close-btn" mat-icon-button (click)="formService.removeForm(i)"><mat-icon>close</mat-icon></button>
+            <button *ngIf="i !== 0" class="close-btn" mat-icon-button (click)="editorService.removeForm(i)"><mat-icon>close</mat-icon></button>
         </ng-template>
         <app-form [form]="form"></app-form>
     </mat-tab>
