--- a/projects/editor/src/lib/components/field-category-list/field-category-list.component.scss
+++ b/projects/editor/src/lib/components/field-category-list/field-category-list.component.scss
@@ -11,10 +11,11 @@
 
 .header {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     column-gap: 8px;
     height: 40px;
-    padding: 4px;
+    padding: 4px 8px;
     box-sizing: border-box;
     user-select: none;
     cursor: pointer;
@@ -23,7 +24,7 @@
 .custom-field {
     height: 40px;
     line-height: 40px;
-	padding: 0 4px 0 60px ;
+	padding: 0 4px 0 40px ;
     box-sizing: border-box;
 	border-radius: 4px;
     cursor: grab; // TODO Set grab and grabbing cursors globally when dragging
