feat(editor): add dialog for new forms

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -116,3 +116,8 @@ button.mat-icon-button {
 		display: none;
 	}
 }
+
+.dialogBackdrop {
+    background-color: white;
+    opacity: 0.6 !important;
+}
