--- a/projects/editor/src/lib/components/editor/editor.component.html
+++ b/projects/editor/src/lib/components/editor/editor.component.html
@@ -1,6 +1,7 @@
 <span class="header">
     <span class="header-title">Formly Editor</span>
     <span class="header-buttons">
+        <button mat-button (click)="onAddForm()"><mat-icon>add</mat-icon>New Form</button>
         <button mat-button (click)="onImportForm()"><mat-icon>file_download</mat-icon>Import Form</button>
         <button mat-button (click)="onExportForm()"><mat-icon>file_upload</mat-icon>Export Form</button>
         <mat-slide-toggle [(ngModel)]="editorService.isEditMode">Edit Mode</mat-slide-toggle>
