feat(field-tree-item): expand ancestors on selected

--- a/projects/editor/src/lib/components/add-form-dialog/add-form-dialog.component.html
+++ b/projects/editor/src/lib/components/add-form-dialog/add-form-dialog.component.html
@@ -14,7 +14,7 @@
         <mat-icon>close</mat-icon>
         <span>Cancel</span>
     </button>
-    <button mat-button [disabled]="!nameModel?.valid" (click)="onAdd()">
+    <button mat-flat-button color="primary" [disabled]="!nameModel?.valid" (click)="onAdd()">
         <mat-icon>add</mat-icon>
         <span>Add</span>
     </button>
