--- a/projects/editor/src/lib/components/editor/editor.component.html
+++ b/projects/editor/src/lib/components/editor/editor.component.html
@@ -19,7 +19,7 @@
 
 <ng-template #emptyView>
     <div class="empty-view">
-        <div>[Cool Logo Here]</div>
-        <button mat-button color="primary" (click)="onAddForm()"><mat-icon>add</mat-icon>New Form</button>
+        <div>[ Cool Logo Here ]</div>
+        <button mat-flat-button color="primary" (click)="onAddForm()"><mat-icon>add</mat-icon>New Form</button>
     </div>
 </ng-template>
