--- a/projects/editor/src/lib/components/import-form-dialog/import-form-dialog.component.html
+++ b/projects/editor/src/lib/components/import-form-dialog/import-form-dialog.component.html
@@ -51,7 +51,7 @@
         <mat-icon>close</mat-icon>
         <span>Cancel</span>
     </button>
-    <button mat-button [disabled]="!isFormValid" (click)="onImport()">
+    <button mat-flat-button color="primary" [disabled]="!isFormValid" (click)="onImport()">
         <mat-icon>file_download</mat-icon>
         <span>Import</span>
     </button>
