--- a/projects/editor/src/lib/components/export-form-dialog/export-form-dialog.component.html
+++ b/projects/editor/src/lib/components/export-form-dialog/export-form-dialog.component.html
@@ -23,7 +23,7 @@
         <mat-icon>close</mat-icon>
         <span>Cancel</span>
     </button>
-    <button mat-button [disabled]="!(nameModel?.valid && jsonModel?.valid)" (click)="onExport()">
+    <button mat-flat-button color="primary" [disabled]="!(nameModel?.valid && jsonModel?.valid)" (click)="onExport()">
         <mat-icon>file_upload</mat-icon>
         <span>Export</span>
     </button>
