--- a/projects/editor/src/lib/components/editor/editor.component.html
+++ b/projects/editor/src/lib/components/editor/editor.component.html
@@ -3,7 +3,7 @@
     <span class="header-buttons">
         <button mat-button (click)="onAddForm()"><mat-icon>add</mat-icon>New Form</button>
         <button mat-button (click)="onImportForm()"><mat-icon>file_download</mat-icon>Import Form</button>
-        <button mat-button (click)="onExportForm()"><mat-icon>file_upload</mat-icon>Export Form</button>
+        <button mat-button (click)="onExportForm()" [disabled]="editorService.forms.length === 0"><mat-icon>file_upload</mat-icon>Export Form</button>
         <mat-slide-toggle [(ngModel)]="editorService.isEditMode">Edit Mode</mat-slide-toggle>
     </span>
 </span>
