--- a/projects/editor/src/lib/components/export-form-dialog/export-form-dialog.component.html
+++ b/projects/editor/src/lib/components/export-form-dialog/export-form-dialog.component.html
@@ -6,7 +6,7 @@
             #nameModel="ngModel" 
             [(ngModel)]="nameValue" 
             matInput required
-            pattern="^[\w\s]+\S\.json$">
+            pattern="^([\w\s]+\.)+json$">
         <mat-error *ngIf="nameModel.errors?.required">Please enter a name</mat-error>
         <mat-error *ngIf="nameModel.errors?.pattern">Invalid file name (must end with '.json')</mat-error>
     </mat-form-field>
